<resources>
    <string name="app_name">کالایار</string>
    <string name="app_name_en">KalaYar</string>
    <string name="shoar">اپلیکیشن جامع انبارداری نوین</string>
    <string name="store_register">ثبت شرکت یا فروشگاه</string>
    <string name="store_insert_name">نام شرکت یا فروشگاه را وارد کنید</string>
    <string name="store_insert_address">آدرس شرکت یا فروشگاه را وارد کنید</string>
    <string name="store_insert_website">وبسایت شرکت یا فروشگاه را وارد کنید</string>
    <string name="store_insert_phone">تلفن شرکت یا فروشگاه را وارد کنید</string>
    <string name="confirm">تایید</string>
    <string name="is_necessary">پر کردن این فیلد ضروری است</string>
    <string name="fill_necessary_field">لطفا تمامی فیلدها را پر کنید</string>
    <string name="kalayar">کالایار!</string>
    <string name="products">محصولات</string>
    <string name="products_name">نام محصولات</string>
    <string name="transactions">تراکنش ها</string>
    <string name="inventory">موجودی</string>
    <string name="money">گزارش</string>
    <string name="import_export_database">پایگاه داده</string>
    <string name="sales_report">گزارش فروش</string>
    <string name="inventory_status">وضعیت انبار</string>
    <string name="sales_today">فروش امروز</string>
    <string name="sales_1_month">فروش ۱ ماه اخیر</string>
    <string name="sales_3_months">فروش ۳ ماه اخیر</string>
    <string name="sales_6_months">فروش ۶ ماه اخیر</string>
    <string name="sales_1_year">فروش ۱ سال اخیر</string>
    <string name="total_sales">مجموع فروش</string>
    <string name="product_search_name">نام محصول را جستوجو کنید</string>
    <string name="product_insert">ثبت محصول</string>
    <string name="product_add">افزودن محصول</string>
    <string name="product_insert_name">نام محصول را وارد کنید</string>
    <string name="product_insert_price">قیمت فروش محصول را وارد کنید (تومان)</string>
    <string name="product_insert_purchase_price">قیمت خرید محصول را وارد کنید (تومان)</string>
    <string name="purchase_price">قیمت خرید</string>
    <string name="product_insert_count">مقدار محصول را وارد کنید (تعداد / وزن)</string>
    <string name="product_insert_unit">واحد اندازه گیری را وارد کنید</string>
    <string name="price_toman">قیمت (تومان)</string>
    <string name="addProduct">افزودن محصول</string>
    <string name="addTransaction">افزودن تراکنش</string>
    <string name="date_and_time">تاریخ و ساعت</string>
    <string name="transaction_search_title">تیتر تراکنش را وارد کنید</string>
    <string name="transaction_insert_title">یک تیتر برای تراکنش درنظر بگیرید</string>
    <string name="transaction_title">تیتر تراکنش</string>
    <string name="transaction_last_price">مبلغ نهایی تراکنش :</string>
    <string name="transaction_insert">ثبت تراکنش</string>
    <string name="transaction_insert_type">نوع تراکنش را انتخاب کنید</string>
    <string name="transaction_insert_description">توضیحاتی درباره تراکنش بنویسید</string>
    <string name="product_unit">واحد محصول :</string>
    <string name="product_count">موجودی :</string>
    <string name="increase">افزایشی</string>
    <string name="decrease">کاهشی</string>
    <string name="products_count">تعداد (مقدار)</string>
    <string name="edit">ویرایش</string>
    <string name="delete">حذف</string>
    <string name="cancel">لغو</string>
    <string name="transaction_show">نمایش تراکنش</string>
    <string name="print">پرینت</string>
    <string name="home">خانه</string>
    <string name="contacts">مشتریان</string>
    <string name="profile">پروفایل</string>
    <string name="contact_search_name">نام مشتری را وارد کنید</string>
    <string name="addContact">افزودن مشتری</string>
    <string name="contact_insert">ثبت مشتری</string>
    <string name="contact_insert_name">نام مشتری را وارد کنید</string>
    <string name="contact_insert_number">تلفن مشتری را وارد کنید</string>
    <string name="duplicate_number_error">این شماره تماس قبلاً ثبت شده است</string>
    <string name="transaction_delete">حذف تراکنش</string>
    <string name="transaction_delete_message">تمامی موجودی ها باقی خواهند ماند\nبا حذف تراکنش موافقید ؟</string>
    <string name="product_delete">حذف محصول</string>
    <string name="product_delete_message">محصول و موجودی های آن حذف خواهند شد\nتمامی تراکنش ها باقی خواهند ماند، با حذف\nمحصول موافقید ؟</string>
    <string name="contact_delete">حذف مشتری</string>
    <string name="contact_delete_message">آیا با حذف مشتری موافقید ؟</string>
    <string name="apply">موافقم</string>
    <string name="create_backup">تهیه نسخه پشتیبان (Backup)</string>
    <string name="restore_backup">بازیابی نسخه پشتیبان (Restore)</string>
    <string name="database_notice">توجه: برای حفظ امنیت داده‌ها، حتماً نسخه پشتیبان را در محلی امن ذخیره کنید.</string>
    <string name="total_inventory_value">ارزش کل موجودی</string>
    <string name="total_profit">سود کل (تراکنش‌های خروجی)</string>
    <string name="low_stock_products">محصولات رو به اتمام (کمتر از ۵ عدد)</string>
    <string name="total_transactions_count">تعداد کل تراکنش‌ها</string>
    <string name="top_selling_product">پرفروش‌ترین کالا</string>
    <string name="least_selling_product">کم‌فروش‌ترین کالا</string>
    <string name="high_value_stock">با ارزش‌ترین کالای انبار</string>
    <string name="default_price">0 تومان</string>
    <string name="total_products_count">تعداد کل کالاها</string>
    <string name="zero">0</string>
    <string name="product_types_count">تعداد انواع محصولات</string>
    <string name="password">رمز عبور</string>
    <string name="rate_and_review">شرکت در نظرسنجی و امتیاز دادن</string>
    <string name="one">1</string>
    <string name="no_products_added">هیچ محصولی اضافه نکردید</string>
    <string name="transaction_title_cannot_be_empty">تیتر تراکنش نمیتواند خالی باشد</string>
    <string name="database_not_initialized">دیتابیس هنوز ایجاد نشده است</string>
    <string name="backup_saved_successfully">نسخه پشتیبان با موفقیت ذخیره شد</string>
    <string name="toman">" تومان"</string>
    <string name="warning">هشدار</string>
    <string name="password_warning_data_loss">در صورت فراموشی رمز عبور تمام اطلاعات پاک خواهند شد آیا با گذاشتن رمز عبور موافقید ؟</string>
    <string name="yes">بله</string>
    <string name="enter_password">رمز عبور را وارد کنید</string>
    <string name="enter_text">مقدار را وارد کنید…</string>
    <string name="choose_password">انتخاب رمز عبور</string>
    <string name="login">ورود</string>
    <string name="forget_password">فراموشی رمز عبور</string>
    <string name="confirm_irreversible_action">این عملیات قابل بازگشت نیست. آیا مایل به ادامه هستید؟</string>
    <string name="yes_delete_it">بله، حذف شود!</string>
    <string name="type_agree_to_continue">در صورت آگاهی از پیامدهای این عملیات، عبارت «موافقم» را در فیلد زیر وارد کنید.</string>
    <string name="delete_it">حذف شود!</string>
    <string name="password_too_short">رمز عبور باید حداقل ۴ کاراکتر باشد</string>
    <string name="live_prices">قیمت‌های زنده</string>
    <string name="exit_app">خروج از برنامه</string>
    <string name="exit_app_message">آیا مایل به خروج از برنامه هستید؟</string>
</resources>
