<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/kalayar_page_background_color">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/STANDARD_32dp"
            android:layout_marginRight="@dimen/STANDARD_32dp"
            android:text="@string/transaction_insert"
            android:textColor="@color/kalayar_text_color"
            android:textSize="@dimen/STANDARD_20sp"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/STANDARD_32dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/kalayar_left"
            app:layout_constraintBottom_toBottomOf="@id/title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/transaction_title_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/STANDARD_16dp"
            android:layout_marginTop="@dimen/STANDARD_16dp"
            android:layout_marginRight="@dimen/STANDARD_16dp"
            android:hint="@string/transaction_insert_title"
            android:textColor="@color/kalayar_text_color"
            android:textColorHint="@color/kalayar_text_hint_color"
            app:boxBackgroundColor="@color/kalayar_edittext_background_color"
            app:boxCornerRadiusBottomEnd="@dimen/STANDARD_32dp"
            app:boxCornerRadiusBottomStart="@dimen/STANDARD_32dp"
            app:boxCornerRadiusTopEnd="@dimen/STANDARD_32dp"
            app:boxCornerRadiusTopStart="@dimen/STANDARD_32dp"
            app:boxStrokeColor="@color/kalayar_primary_color"
            app:boxStrokeWidth="0dp"
            app:hintTextColor="@color/kalayar_primary_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/transaction_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/kalayar_info"
                android:drawablePadding="@dimen/STANDARD_8dp"
                android:inputType="text"
                android:maxLength="32"
                android:paddingLeft="@dimen/STANDARD_24dp"
                android:paddingRight="@dimen/STANDARD_24dp"
                android:textSize="@dimen/STANDARD_16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/transaction_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/STANDARD_16dp"
            android:layout_marginTop="@dimen/STANDARD_4dp"
            app:checkedButton="@+id/decrease"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/transaction_title_layout"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/increase"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/increase"
                android:textColor="@color/kalayar_text_color"
                android:textSize="@dimen/STANDARD_12sp"
                app:backgroundTint="@color/button_group_background_color"
                app:strokeColor="@color/button_group_stroke_color" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/decrease"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decrease"
                android:textColor="@color/kalayar_text_color"
                android:textSize="@dimen/STANDARD_12sp"
                app:backgroundTint="@color/button_group_background_color"
                app:strokeColor="@color/button_group_stroke_color" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/STANDARD_16dp"
            android:gravity="right"
            android:text="@string/transaction_insert_type"
            app:layout_constraintBottom_toBottomOf="@id/transaction_type"
            app:layout_constraintLeft_toRightOf="@id/transaction_type"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/transaction_type" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/transaction_description_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/STANDARD_16dp"
            android:layout_marginRight="@dimen/STANDARD_16dp"
            android:hint="@string/transaction_insert_description"
            android:textColor="@color/kalayar_text_color"
            android:textColorHint="@color/kalayar_text_hint_color"
            app:boxBackgroundColor="@color/kalayar_edittext_background_color"
            app:boxCornerRadiusBottomEnd="@dimen/STANDARD_32dp"
            app:boxCornerRadiusBottomStart="@dimen/STANDARD_32dp"
            app:boxCornerRadiusTopEnd="@dimen/STANDARD_32dp"
            app:boxCornerRadiusTopStart="@dimen/STANDARD_32dp"
            app:boxStrokeColor="@color/kalayar_primary_color"
            app:boxStrokeWidth="0dp"
            app:hintTextColor="@color/kalayar_primary_color"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/transaction_type">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/transaction_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:maxLength="256"
                android:paddingLeft="@dimen/STANDARD_24dp"
                android:paddingRight="@dimen/STANDARD_24dp"
                android:textSize="@dimen/STANDARD_16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/transaction_last_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|right"
            android:layout_marginRight="32dp"
            android:layout_marginTop="@dimen/STANDARD_4dp"
            android:layout_marginLeft="@dimen/STANDARD_32dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/transaction_description_layout"
            android:text="@string/transaction_last_price"
            android:textColor="@color/kalayar_text_color"
            android:textSize="@dimen/STANDARD_12sp"/>

        <View
            android:id="@+id/view_1"
            android:layout_width="0dp"
            android:layout_height="@dimen/STANDARD_48dp"
            android:layout_marginTop="@dimen/STANDARD_8dp"
            android:background="@color/kalayar_primary_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/transaction_last_price" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/product_recyclerview_title_name"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center_vertical|right"
            android:paddingRight="@dimen/STANDARD_16dp"
            android:text="@string/products_name"
            android:textColor="@color/kalayar_text_on_primary_color"
            android:textSize="@dimen/STANDARD_12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/view_1"
            app:layout_constraintHorizontal_weight="0.6"
            app:layout_constraintLeft_toRightOf="@id/product_recyclerview_title_price"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/view_1" />

        <View
            android:layout_width="0.2dp"
            android:layout_height="0dp"
            android:background="@color/kalayar_icon_hint_color"
            app:layout_constraintBottom_toBottomOf="@id/view_1"
            app:layout_constraintLeft_toRightOf="@id/product_recyclerview_title_price"
            app:layout_constraintRight_toLeftOf="@id/product_recyclerview_title_name"
            app:layout_constraintTop_toTopOf="@id/view_1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/product_recyclerview_title_price"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center_vertical|right"
            android:paddingLeft="@dimen/STANDARD_16dp"
            android:paddingRight="@dimen/STANDARD_16dp"
            android:text="@string/price_toman"
            android:textColor="@color/kalayar_text_on_primary_color"
            android:textSize="@dimen/STANDARD_12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/view_1"
            app:layout_constraintHorizontal_weight="0.4"
            app:layout_constraintLeft_toRightOf="@id/view_2"
            app:layout_constraintRight_toLeftOf="@id/product_recyclerview_title_name"
            app:layout_constraintTop_toTopOf="@id/view_1" />

        <View
            android:id="@+id/view_2"
            android:layout_width="@dimen/STANDARD_48dp"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/STANDARD_16dp"
            app:layout_constraintBottom_toBottomOf="@id/view_1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/view_1" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/product_recyclerview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_1" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/STANDARD_32dp"
            android:layout_marginBottom="@dimen/STANDARD_8dp"
            android:text="@string/confirm"
            android:textColor="@color/kalayar_text_on_primary_color"
            android:textSize="@dimen/STANDARD_16sp"
            app:backgroundTint="@color/kalayar_green_color"
            app:icon="@drawable/kalayar_confirm"
            app:iconTint="@color/kalayar_icon_on_primary_color"
            app:layout_constraintBottom_toTopOf="@id/add_product"
            app:layout_constraintRight_toRightOf="parent" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/add_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/STANDARD_32dp"
            android:layout_marginBottom="@dimen/STANDARD_32dp"
            android:text="@string/addProduct"
            android:textColor="@color/kalayar_text_on_primary_color"
            android:textSize="@dimen/STANDARD_16sp"
            app:backgroundTint="@color/kalayar_primary_color"
            app:icon="@drawable/kalayar_add_icon"
            app:iconTint="@color/kalayar_icon_on_primary_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>